@@ -117,6 +117,7 @@ Release 0.19.0 - Unreleased
                (Tim Sell via Stack)
    HBASE-543,  HBASE-1046, HBase-1051 A region's state is kept in several places
                in the master opening the possibility for race conditions
+   HBASE-1072  Change Thread.join on exit to a timed Thread.join
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
